--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.10",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-video": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
