--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-scroll": "^1.9.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
